tolk-tester/tests/invalid-symbol/err-2804.tolk
const asdf = ttt;

/**
@compilation_should_fail
@stderr undefined symbol `ttt`
 */
